k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: sevenapps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: 192.168.49.2
      http:
        paths:
          - path: /v1/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - path: /v1/pdf
            pathType: Prefix
            backend:
              service:
                name: upload-service
                port:
                  number: 80
